daemon: Emit the PropertiesChanged signal

Use raw D-Bus.

https://bugs.freedesktop.org/show_bug.cgi?id=43001